--- a/cbl_release_GF_SA_US/README
+++ b/cbl_release_GF_SA_US/README
@@ -1,1 +1,2 @@
-The *.dat files contain the information on the contacts formed between Cbl and BtuB, root-mean-square fluctuations (RMSF) of Cbl during its permeation simulated with GF-SA-US.
+The *.dat files contain the information on the contacts formed between Cbl and BtuB, root-mean-square fluctuations (RMSF) of Cbl during its permeation simulated with GF-SA-US and conventional US.
+The *.zip files comprise the energy of interaction between Cbl and BtuB during its permeation simulated with GF-SA-US and US.  
